k8s/private-gpt-llamacpp-cpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --profile llamacpp-cpu
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: private-gpt-llamacpp-cpu
  name: private-gpt-llamacpp-cpu
  namespace: private-gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: private-gpt-llamacpp-cpu
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --profile llamacpp-cpu
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: private-gpt-llamacpp-cpu
    spec:
      containers:
        - command:
            - sh
            - -c
            - .venv/bin/python scripts/setup && .venv/bin/python -m private_gpt
          image: zylonai/private-gpt:0.6.2-llamacpp-cpu
          name: private-gpt-llamacpp-cpu
          ports:
            - containerPort: 8001
              protocol: TCP
          volumeMounts:
            - mountPath: /home/worker/app/local_data
              name: private-gpt-llamacpp-cpu-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: private-gpt-llamacpp-cpu-cm0
          name: private-gpt-llamacpp-cpu-cm0
