k8s/private-gpt-llamacpp-cpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --profile llamacpp-cpu
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: private-gpt-llamacpp-cpu
  name: private-gpt-llamacpp-cpu
  namespace: private-gpt
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: private-gpt-llamacpp-cpu
