k8s/private-gpt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: private-gpt
  name: private-gpt
  namespace: private-gpt
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    app: private-gpt
