k8s/private-gpt-llamacpp-cpu-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-gpt-llamacpp-cpu
  namespace: private-gpt
spec:
  rules:
  - host: private-gpt.daimler.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: private-gpt-llamacpp-cpu
            port:
              number: 8001
